better ui. static implemnted.

--- a/crm/web/WEB-INF/crmui/style/main.less
+++ b/crm/web/WEB-INF/crmui/style/main.less
@@ -30,6 +30,19 @@ html, body
 	}
 }
 
+.page-menu
+{
+	#north-part
+	{
+		overflow: hidden;
+		box-shadow: gray 0 1px 10px;
+	}
+	#center-part
+	{
+		//padding: 0;
+	}
+}
+
 // 通常的带选择框的table
 .general-table
 {
