--- a/jk/src/main/webapp/skin/default/css/table.css
+++ b/jk/src/main/webapp/skin/default/css/table.css
@@ -49,15 +49,27 @@ textarea {
 }
 
 /* 表格栏目 */
-.columnTitle {
-	width:120px;
-	white-space:nowrap;
-	padding: 15px;
-	margin-right:-50px;
+.columnTitle_mustbe {
+	width: 90px;
+	PADDING: 0px 5px 5px 18px;
+	BACKGROUND:url(../images/must.gif) no-repeat left 15px; 
+	FONT: 9pt 宋体; 
 	COLOR: #00544a; 
 	TEXT-ALIGN: left;
 	border-bottom:1px solid #c1e1dd;
-	line-height:150%;
+	padding-top:15px;
+	letter-spacing:1.5px;
+}
+
+.columnTitle {
+	width: 90px;
+	PADDING: 0px 5px 5px 18px;
+	FONT: 9pt 宋体; 
+	COLOR: #00544a; 
+	TEXT-ALIGN: left;
+	border-bottom:1px solid #c1e1dd;
+	padding-top:15px;
+	letter-spacing:1.5px;
 }
 /* 表格内容 */
 .normalTD {
@@ -82,17 +94,7 @@ textarea {
 	 width:100%;
 }
 
-.columnTitle_mustbe {
-	width: 90px;
-	PADDING: 5px 5px 5px 18px;
-	BACKGROUND:url(/skin/default/images/must.gif) no-repeat left 18px; 
-	FONT: 9pt 宋体; 
-	COLOR: #00544a; 
-	TEXT-ALIGN: left;
-	border-bottom:1px solid #c1e1dd;
-	padding-top:15px;
-	letter-spacing:1.5px;
-}
+
 .td_title {
     PADDING: 5px 5px 5px 6px;
 	FONT: 9pt 宋体; 
